--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,14 @@ version = "0.1.0"
 edition = "2021"
 resolver = "2"
 
+[lib]
+name = "stones"
+path = "src/lib.rs"
+
+[[bin]]
+name = "mancala"
+path = "src/bin.rs"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [profile.dev]
@@ -15,5 +23,14 @@ opt-level = 3
 
 [dependencies]
 bevy = { version = "0.12.1", features = [] }
-bevy_rapier3d = { version = "0.24.0", features = ["debug-render", "parallel", "serde", "simd-stable"] }
+bevy-inspector-egui = "0.22.1"
+bevy_asset_loader = { version = "0.19.1", features = ["3d", "progress_tracking"] }
+bevy_rapier3d = { version = "0.24.0", features = ["debug-render", "parallel", "serde-serialize", "simd-stable", "async-collider"] }
+iyes_progress = { version = "0.10.0", features = ["bevy_asset", "bevy_log"] }
+rmp-serde = "1.1.2"
+serde = "1.0.196"
+serde_json = "1.0.113"
+thiserror = "1.0.57"
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = ["tracing-log", "env-filter"] }
 # bevy_xpbd_3d = { version = "0.3.3", features = ["debug-plugin"] }
