--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,5 @@
 *.glb filter=lfs diff=lfs merge=lfs -text
 *.msp filter=lfs diff=lfs merge=lfs -text
 *.fbx filter=lfs diff=lfs merge=lfs -text
+*.obj filter=lfs diff=lfs merge=lfs -text
+*.mtl filter=lfs diff=lfs merge=lfs -text
