--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,35 +38,49 @@ debug = true
 # codegen-units = 1
 # strip = true
 
-# # Profile for distribution
-# [profile.dist]
-# inherits = "release"
-# opt-level = 3
-# lto = true
-# codegen-units = 1
-# strip = true
+# Profile for distribution
+[profile.dist]
+inherits = "release"
+opt-level = 3
+lto = true
+codegen-units = 1
+strip = true
+debug = false
 
 
 [dependencies]
-bevy = { version = "0.13.0", features = [] }
-bevy_asset_loader = { version = "0.20.0", features = ["3d", "progress_tracking", "standard_dynamic_assets"] }
-bevy_mod_billboard = { git = "https://github.com/kulkalkul/bevy_mod_billboard", branch = "main" }
-bevy_mod_picking = { version = "0.17.0", features = [] }
-bevy_obj = "0.13"
-bevy_rapier3d = { version = "0.25.0", features = ["debug-render", "parallel", "serde-serialize", "simd-stable", "async-collider"] }
-iyes_progress = { version = "0.11.0", features = ["bevy_asset", "bevy_log"] }
-rmp-serde = "1.1.2"
-serde = "1.0.196"
-serde_json = "1.0.113"
-thiserror = "1.0.57"
-tracing = "0.1.40"
-tracing-subscriber = { version = "0.3.18", features = ["tracing-log", "env-filter"] }
+avian3d = { version = "0.2.0", features = ["simd", "serialize"] }
+bevy = { version = "0.15.1", features = [] }
+bevy_asset_loader = { version = "0.22.0", features = [
+    "3d",
+    "progress_tracking",
+    "standard_dynamic_assets",
+] }
+# bevy_mod_billboard = { git = "https://github.com/kulkalkul/bevy_mod_billboard", branch = "main" }
+# bevy_mod_picking = { version = "0.20.1", features = [] }
+bevy_obj = "0.15"
+# bevy_rapier3d = { version = "0.28.0", features = [
+#     "debug-render",
+#     "parallel",
+#     "serde-serialize",
+#     "simd-stable",
+#     "async-collider",
+# ] }
+iyes_progress = { version = "0.13.1", features = [] }
+rmp-serde = "1.3.0"
+serde = "1.0.217"
+serde_json = "1.0.136"
+thiserror = "2.0.11"
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.19", features = [
+    "tracing-log",
+    "env-filter",
+] }
 
 [target.'cfg(not(target_os = "android"))'.dependencies]
-bevy-inspector-egui = { git = "https://github.com/Aztro-dev/bevy-inspector-egui.git", branch = "main", version = "0.23.0" }
-# bevy-inspector-egui = { version = "0.22.1" }
+# bevy-inspector-egui = { git = "https://github.com/jakobhellermann/bevy-inspector-egui.git", branch = "v0.28.1", version = "0.28.1" }
+bevy-inspector-egui = { version = "0.28.1" }
 
 
-
-[patch.crates-io]
-bevy_mod_picking = { git = "https://github.com/StrikeForceZero/bevy_mod_picking.git", branch = "bevy-0.13" }
+# [patch.crates-io]
+# bevy_mod_picking = { git = "https://github.com/StrikeForceZero/bevy_mod_picking.git", branch = "bevy-0.13" }
