feat: Fix physics, and let the stones sleep after half a second.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,7 +50,7 @@ debug = false
 
 [dependencies]
 avian3d = { version = "0.2.0", features = ["simd", "serialize"] }
-bevy = { version = "0.15.1", features = [] }
+bevy = { version = "0.15.1", features = ["file_watcher"] }
 bevy_asset_loader = { version = "0.22.0", features = [
     "3d",
     "progress_tracking",
@@ -58,7 +58,8 @@ bevy_asset_loader = { version = "0.22.0", features = [
 ] }
 # bevy_mod_billboard = { git = "https://github.com/kulkalkul/bevy_mod_billboard", branch = "main" }
 # bevy_mod_picking = { version = "0.20.1", features = [] }
-bevy_obj = "0.15"
+# bevy_obj = "0.15"
+# blenvy = { git = "https://github.com/ptsd/Blenvy.git", branch = "blenvy-bevy-0.15" }
 # bevy_rapier3d = { version = "0.28.0", features = [
 #     "debug-render",
 #     "parallel",
