--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,4 @@
 *.fbx filter=lfs diff=lfs merge=lfs -text
 *.obj filter=lfs diff=lfs merge=lfs -text
 *.mtl filter=lfs diff=lfs merge=lfs -text
+keystore.properties filter=git-crypt diff=git-crypt
