--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -9,8 +9,8 @@ android {
     defaultConfig {
         applicationId "org.favil.stones"
         minSdk 31
-        targetSdk 33
-        versionCode 1
+        targetSdk 34
+        versionCode 7
         versionName "1.0"
         // need this otherwise it won't insert libc++_shared.so
         externalNativeBuild {
@@ -20,9 +20,21 @@ android {
         }
         // set up targets
         ndk {
-            abiFilters 'arm64-v8a'
+            abiFilters 'arm64-v8a', 'armeabi-v7a', 'x86', 'x86_64'
         }
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+    signingConfigs {
+        release {
+            def Properties raw_props = new Properties()
+            raw_props.load(new FileInputStream(file("keystore.properties")))
+            def Properties key_props = new Properties()
+            raw_props.entrySet().forEach { e -> key_props.put(e.getKey(), e.getValue().replace("\${HOME}", String.valueOf(System.getenv("HOME")))) }
+            storeFile file(String.valueOf(key_props['STORE_FILE']))
+            storePassword key_props['STORE_PASSWORD']
+            keyPassword key_props['KEY_PASSWORD']
+            keyAlias key_props['KEY_ALIAS']
+        }
     }
     externalNativeBuild {
         cmake {
@@ -33,6 +45,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
     compileOptions {
@@ -56,7 +69,6 @@ android {
 }
 
 dependencies {
-
     implementation libs.appcompat
     implementation libs.material
     implementation libs.games.activity
