--- a/Cargo.toml
+++ b/Cargo.toml
@@ -86,6 +86,7 @@ log = { version = "0.4", features = [
 ] }
 webbrowser = { version = "1", features = ["hardened"] }
 rayon = "1.10.0"
+bevy-sequential-actions = "0.12.0"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = "0.2.100"
