--- a/mobile/android/gradle/libs.versions.toml
+++ b/mobile/android/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.4.0"
+androidVersioning = "2.0.3"
 junit = "4.13.2"
 junitVersion = "1.1.5"
 espressoCore = "3.5.1"
@@ -17,3 +18,4 @@ games-activity = { group = "androidx.games", name = "games-activity", version.re
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
+android-versioning = { id = "eu.davidea.grabver", version.ref = "androidVersioning" }
