--- a/mobile/android/stones/build.gradle
+++ b/mobile/android/stones/build.gradle
@@ -1,5 +1,11 @@
 plugins {
     alias(libs.plugins.android.application)
+    alias(libs.plugins.android.versioning)
+}
+
+apply from: "../utils.gradle"
+
+versioning {
 }
 
 android {
@@ -10,8 +16,8 @@ android {
         applicationId "org.favil.stones"
         minSdk 31
         targetSdk 34
-        versionCode 9
-        versionName "1.0"
+        versionCode versioning.code
+        versionName versioning.name
         // need this otherwise it won't insert libc++_shared.so
         externalNativeBuild {
             cmake {
@@ -49,8 +55,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility 21
+        targetCompatibility 21
     }
     buildFeatures {
         prefab true
@@ -66,6 +72,8 @@ android {
             res.srcDirs += files('../../../assets/android-res')
         }
     }
+
+    setProperty("archivesBaseName", getArtifactName(defaultConfig))
 }
 
 dependencies {
